# dtimebot

./: .gitignore  README.md  main.py  pyproject.toml
dtimebot/: __init__.py  access_rules.py  activities.py  activity_tags.py  configs.py  database.py  directories.py  directory_tags.py  invitations.py  logs.py  members.py  subscriptions.py  tasks.py  users.py
dtimebot/bot/: __init__.py  handlers.py
dtimebot/models/: __init__.py  access_rules.py  activities.py  directories.py  directory_tags.py  invitations.py  members.py  subscriptions.py  tasks.py  users.py
dtimebot/scheduling/: __init__.py  triggers.py
dtimebot/services/: __init__.py  directory_service.py  invitation_service.py  task_service.py  user_service.py
