[project]
name = "delegated-time-bot"
version = "0.1.0"
description = "Бот для управыления задачами в Телеграм"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.21.0",
    "apscheduler>=3.11.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
]
